--- a/src/demo/launcher.html
+++ b/src/demo/launcher.html
@@ -23,60 +23,64 @@
 
     .launcher-container {
       background: #ffffff;
-      border-radius: 16px;
-      padding: 32px;
-      box-shadow: 0 20px 50px rgba(15, 23, 42, 0.45);
-      max-width: 600px;
+      border-radius: 20px;
+      padding: 36px 40px;
+      box-shadow: 0 25px 60px rgba(15, 23, 42, 0.35), 0 0 1px rgba(0, 0, 0, 0.1);
+      max-width: 520px;
       width: 100%;
     }
 
     .header {
       text-align: center;
-      margin-bottom: 24px;
+      margin-bottom: 28px;
     }
 
     .header h1 {
-      font-size: 28px;
+      font-size: 26px;
       font-weight: 700;
-      color: #111827;
-      margin-bottom: 6px;
+      color: #0f172a;
+      margin-bottom: 8px;
+      letter-spacing: -0.02em;
     }
 
     .header p {
       font-size: 14px;
-      color: #6b7280;
+      color: #64748b;
+      line-height: 1.5;
     }
 
     /* Mode Selection Buttons */
     .mode-selection {
       display: flex;
-      gap: 10px;
-      margin-bottom: 24px;
+      gap: 12px;
+      margin-bottom: 28px;
     }
 
     .mode-btn {
       flex: 1;
-      padding: 12px 18px;
-      border: 2px solid #e5e7eb;
-      border-radius: 10px;
+      padding: 14px 16px;
+      border: 2px solid #e2e8f0;
+      border-radius: 12px;
       font-size: 14px;
       font-weight: 600;
       cursor: pointer;
       transition: all 0.2s ease;
       font-family: inherit;
-      background: #ffffff;
-      color: #374151;
+      background: #fff;
+      color: #475569;
     }
 
     .mode-btn:hover {
-      border-color: #6366f1;
-      background: #f0f4ff;
+      border-color: #3b82f6;
+      background: #eff6ff;
+      color: #1d4ed8;
     }
 
     .mode-btn.active {
-      border-color: #6366f1;
-      background: #6366f1;
-      color: #ffffff;
+      border-color: #3b82f6;
+      background: #3b82f6;
+      color: #fff;
+      box-shadow: 0 4px 12px rgba(59, 130, 246, 0.35);
     }
 
     /* Form Views */
@@ -89,44 +93,46 @@
     }
 
     .form-group {
-      margin-bottom: 18px;
+      margin-bottom: 20px;
     }
 
     label {
       display: block;
       font-size: 13px;
       font-weight: 600;
-      color: #374151;
-      margin-bottom: 6px;
+      color: #475569;
+      margin-bottom: 8px;
+      letter-spacing: 0.01em;
     }
 
     input[type="url"] {
       width: 100%;
-      padding: 11px 14px;
-      border: 2px solid #e5e7eb;
+      padding: 12px 16px;
+      border: 1px solid #e2e8f0;
       border-radius: 10px;
       font-size: 14px;
       font-family: inherit;
       transition: border-color 0.2s, box-shadow 0.2s;
+      background: #fff;
     }
 
     input[type="url"]:focus {
       outline: none;
-      border-color: #6366f1;
-      box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.18);
+      border-color: #3b82f6;
+      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.15);
     }
 
     .button-row {
       display: flex;
-      gap: 10px;
-      margin-top: 4px;
+      gap: 12px;
+      margin-top: 8px;
     }
 
     .btn {
       flex: 1;
-      padding: 10px 18px;
+      padding: 12px 20px;
       border: none;
-      border-radius: 999px;
+      border-radius: 10px;
       font-size: 14px;
       font-weight: 600;
       cursor: pointer;
@@ -135,34 +141,37 @@
     }
 
     .btn-primary {
-      background: #4f46e5;
-      color: #ffffff;
+      background: #3b82f6;
+      color: #fff;
+      box-shadow: 0 2px 8px rgba(59, 130, 246, 0.25);
     }
 
     .btn-primary:hover {
-      background: #4338ca;
+      background: #2563eb;
       transform: translateY(-1px);
-      box-shadow: 0 8px 20px rgba(79, 70, 229, 0.35);
+      box-shadow: 0 6px 16px rgba(59, 130, 246, 0.35);
     }
 
     .btn-secondary {
-      background: #f3f4f6;
-      color: #374151;
+      background: #f1f5f9;
+      color: #475569;
     }
 
     .btn-secondary:hover {
-      background: #e5e7eb;
+      background: #e2e8f0;
+      color: #0f172a;
     }
 
     .error {
-      margin-top: 10px;
-      padding: 10px 12px;
+      margin-top: 12px;
+      padding: 12px 14px;
       background: #fef2f2;
       border: 1px solid #fecaca;
       border-radius: 10px;
-      color: #991b1b;
+      color: #b91c1c;
       font-size: 13px;
       display: none;
+      line-height: 1.4;
     }
 
     .error.show {
@@ -427,19 +436,28 @@
     }
 
     .info-box {
-      margin-top: 18px;
-      padding: 12px 14px;
-      background: #eff6ff;
-      border: 1px solid #bfdbfe;
-      border-radius: 10px;
+      margin-top: 24px;
+      padding: 16px 18px;
+      background: #f0f9ff;
+      border: 1px solid #bae6fd;
+      border-radius: 12px;
       font-size: 13px;
-      color: #1e40af;
-      line-height: 1.5;
+      color: #0369a1;
+      line-height: 1.55;
     }
 
     .info-box strong {
       display: block;
-      margin-bottom: 3px;
+      margin-bottom: 6px;
+      color: #0c4a6e;
+      font-size: 13px;
+    }
+
+    .info-box code {
+      background: rgba(0, 0, 0, 0.06);
+      padding: 2px 6px;
+      border-radius: 4px;
+      font-size: 12px;
     }
   </style>
 </head>
