--- a/src/sdk/editor/editor.html
+++ b/src/sdk/editor/editor.html
@@ -12,20 +12,21 @@
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-      background: #ffffff;
+      font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+      background: #f8fafc;
       color: #111827;
       height: 100vh;
       overflow: hidden;
       display: flex;
       flex-direction: column;
+      line-height: 1.5;
     }
 
     .editor-container {
       display: flex;
       flex-direction: column;
       height: 100%;
-      background: #ffffff;
+      background: #fff;
     }
 
     /* Header */
@@ -34,8 +35,8 @@
       justify-content: space-between;
       align-items: center;
       padding: 16px 20px;
-      border-bottom: 1px solid #e5e7eb;
-      background: #ffffff;
+      border-bottom: 2px solid #e2e8f0;
+      background: #fff;
     }
 
     .header-left {
@@ -46,51 +47,58 @@
 
     .menu-icon {
       cursor: pointer;
-      color: #6b7280;
+      color: #64748b;
       font-size: 18px;
-      width: 24px;
-      height: 24px;
+      width: 28px;
+      height: 28px;
       display: flex;
       align-items: center;
       justify-content: center;
+      border-radius: 8px;
+      transition: all 0.2s;
     }
 
     .menu-icon:hover {
-      color: #111827;
+      color: #0f172a;
+      background: #f1f5f9;
     }
 
     .header h2 {
-      font-size: 16px;
+      font-size: 17px;
       font-weight: 600;
-      color: #111827;
+      color: #0f172a;
+      letter-spacing: -0.01em;
     }
 
     .close-icon {
       cursor: pointer;
-      color: #6b7280;
+      color: #64748b;
       font-size: 18px;
-      width: 24px;
-      height: 24px;
+      width: 32px;
+      height: 32px;
       display: flex;
       align-items: center;
       justify-content: center;
       background: none;
       border: none;
       padding: 0;
+      border-radius: 8px;
+      transition: all 0.2s;
     }
 
     .close-icon:hover {
-      color: #111827;
+      color: #0f172a;
+      background: #f1f5f9;
     }
 
     .exit-editor-btn {
-      padding: 6px 12px;
-      background: #f3f4f6;
-      border: 1px solid #d1d5db;
-      border-radius: 6px;
+      padding: 8px 14px;
+      background: #f1f5f9;
+      border: 1px solid #e2e8f0;
+      border-radius: 8px;
       font-size: 13px;
-      font-weight: 500;
-      color: #374151;
+      font-weight: 600;
+      color: #475569;
       cursor: pointer;
       transition: all 0.2s;
       font-family: inherit;
@@ -98,25 +106,26 @@
     }
 
     .exit-editor-btn:hover {
-      background: #e5e7eb;
-      border-color: #9ca3af;
+      background: #e2e8f0;
+      border-color: #cbd5e1;
+      color: #0f172a;
     }
 
     /* Tabs */
     .tabs {
       display: flex;
-      border-bottom: 1px solid #e5e7eb;
-      background: #ffffff;
+      border-bottom: 1px solid #e2e8f0;
+      background: #fff;
       padding: 0 20px;
     }
 
     .tab {
-      padding: 12px 16px;
+      padding: 14px 18px;
       background: none;
       border: none;
       font-size: 14px;
       font-weight: 500;
-      color: #6b7280;
+      color: #64748b;
       cursor: pointer;
       position: relative;
       transition: color 0.2s;
@@ -124,11 +133,11 @@
     }
 
     .tab:hover {
-      color: #111827;
+      color: #0f172a;
     }
 
     .tab.active {
-      color: #111827;
+      color: #0f172a;
       font-weight: 600;
     }
 
@@ -138,8 +147,9 @@
       bottom: -1px;
       left: 0;
       right: 0;
-      height: 2px;
-      background: #111827;
+      height: 3px;
+      background: #3b82f6;
+      border-radius: 3px 3px 0 0;
     }
 
     /* Content */
@@ -147,6 +157,7 @@
       flex: 1;
       overflow-y: auto;
       padding: 24px 20px;
+      background: #f8fafc;
     }
 
     .tab-content {
@@ -159,7 +170,7 @@
 
     /* Form Groups */
     .form-group {
-      margin-bottom: 24px;
+      margin-bottom: 20px;
     }
 
     .form-group:last-child {
@@ -168,15 +179,16 @@
 
     label {
       display: block;
-      font-size: 14px;
-      font-weight: 500;
-      color: #111827;
+      font-size: 13px;
+      font-weight: 600;
+      color: #475569;
       margin-bottom: 8px;
+      letter-spacing: 0.01em;
     }
 
     .form-description {
       font-size: 12px;
-      color: #6b7280;
+      color: #64748b;
       margin-top: 4px;
       margin-bottom: 12px;
       line-height: 1.5;
@@ -190,26 +202,26 @@
 
     .dropdown-select {
       width: 100%;
-      padding: 10px 12px;
-      padding-right: 36px;
-      border: 1px solid #d1d5db;
-      border-radius: 6px;
+      padding: 10px 14px;
+      padding-right: 40px;
+      border: 1px solid #e2e8f0;
+      border-radius: 8px;
       font-size: 14px;
       font-family: inherit;
-      background: #ffffff;
-      color: #111827;
+      background: #fff;
+      color: #0f172a;
       cursor: pointer;
       appearance: none;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%236b7280' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%2364748b' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
       background-repeat: no-repeat;
-      background-position: right 12px center;
-      transition: border-color 0.2s;
+      background-position: right 14px center;
+      transition: border-color 0.2s, box-shadow 0.2s;
     }
 
     .dropdown-select:focus {
       outline: none;
       border-color: #3b82f6;
-      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.15);
     }
 
     /* Radio Buttons */
@@ -244,21 +256,21 @@
     /* Input Field */
     .input-field {
       width: 100%;
-      padding: 10px 12px;
-      border: 1px solid #d1d5db;
-      border-radius: 6px;
+      padding: 10px 14px;
+      border: 1px solid #e2e8f0;
+      border-radius: 8px;
       font-size: 13px;
       font-family: 'Monaco', 'Courier New', monospace;
-      background: #f9fafb;
-      color: #111827;
-      transition: border-color 0.2s, background-color 0.2s;
+      background: #f8fafc;
+      color: #0f172a;
+      transition: border-color 0.2s, background-color 0.2s, box-shadow 0.2s;
     }
 
     .input-field:focus {
       outline: none;
       border-color: #3b82f6;
-      background: #ffffff;
-      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+      background: #fff;
+      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.15);
     }
 
     .input-field:disabled {
@@ -310,33 +322,37 @@
     /* Textarea for Content */
     textarea {
       width: 100%;
-      padding: 10px 12px;
-      border: 1px solid #d1d5db;
-      border-radius: 6px;
+      padding: 10px 14px;
+      border: 1px solid #e2e8f0;
+      border-radius: 8px;
       font-size: 14px;
       font-family: inherit;
       resize: vertical;
       min-height: 100px;
-      transition: border-color 0.2s;
+      transition: border-color 0.2s, box-shadow 0.2s;
+      background: #fff;
     }
 
     textarea:focus {
       outline: none;
       border-color: #3b82f6;
-      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.15);
     }
 
     /* Empty State */
     .empty-state {
       text-align: center;
-      padding: 60px 20px;
-      color: #6b7280;
+      padding: 48px 24px;
+      color: #64748b;
+      background: #f8fafc;
+      border: 1px dashed #e2e8f0;
+      border-radius: 12px;
     }
 
     .empty-state-icon {
       font-size: 48px;
       margin-bottom: 16px;
-      opacity: 0.5;
+      opacity: 0.6;
     }
 
     .empty-state-text {
@@ -346,53 +362,57 @@
 
     /* Actions */
     .actions {
-      padding: 16px 20px;
-      border-top: 1px solid #e5e7eb;
-      background: #ffffff;
+      padding: 18px 20px;
+      border-top: 2px solid #e2e8f0;
+      background: #fff;
       display: flex;
       gap: 12px;
     }
 
     .btn {
       flex: 1;
-      padding: 10px 20px;
+      padding: 12px 20px;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       font-size: 14px;
-      font-weight: 500;
+      font-weight: 600;
       cursor: pointer;
       transition: all 0.2s;
       font-family: inherit;
     }
 
     .btn-cancel {
-      background: #f3f4f6;
-      color: #374151;
+      background: #f1f5f9;
+      color: #475569;
     }
 
     .btn-cancel:hover {
-      background: #e5e7eb;
+      background: #e2e8f0;
+      color: #0f172a;
     }
 
     .btn-done {
       background: #14b8a6;
-      color: #ffffff;
+      color: #fff;
+      box-shadow: 0 2px 8px rgba(20, 184, 166, 0.25);
     }
 
     .btn-done:hover {
       background: #0d9488;
+      box-shadow: 0 4px 12px rgba(20, 184, 166, 0.35);
     }
 
     /* Error */
     .error {
-      padding: 10px 12px;
+      padding: 12px 14px;
       background: #fef2f2;
       border: 1px solid #fecaca;
-      border-radius: 6px;
-      color: #991b1b;
-      font-size: 12px;
+      border-radius: 8px;
+      color: #b91c1c;
+      font-size: 13px;
       margin-bottom: 16px;
       display: none;
+      line-height: 1.4;
     }
 
     .error.show {
