--- a/src/demo/launcher.html
+++ b/src/demo/launcher.html
@@ -105,7 +105,7 @@
       letter-spacing: 0.01em;
     }
 
-    input[type="url"] {
+    .target-url-input {
       width: 100%;
       padding: 12px 16px;
       border: 1px solid #e2e8f0;
@@ -116,7 +116,7 @@
       background: #fff;
     }
 
-    input[type="url"]:focus {
+    .target-url-input:focus {
       outline: none;
       border-color: #3b82f6;
       box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.15);
@@ -481,8 +481,9 @@
         <div class="form-group">
           <label for="targetUrl">Target URL</label>
           <input
-            type="url"
+            type="text"
             id="targetUrl"
+            class="target-url-input"
             placeholder="https://your-app.com/page"
             required
             autocomplete="off"
@@ -499,8 +500,8 @@
 
       <div class="info-box">
         <strong>How it works</strong>
-        Enter the URL of a page that already loads the Visual Designer SDK. This launcher will open that
-        URL in a new tab and append <code>?designer=true</code> so the SDK auto-enables editor mode.
+        Enter any target URL (your app, staging, or your own simulator). The launcher opens the URL in a new tab
+        and appends <code>?designer=true&amp;mode=guide</code> so the SDK enables editor mode when your app calls <code>init()</code>.
       </div>
     </div>
 
@@ -510,8 +511,9 @@
         <div class="form-group">
           <label for="tagFeatureUrl">Target URL</label>
           <input
-            type="url"
+            type="text"
             id="tagFeatureUrl"
+            class="target-url-input"
             placeholder="https://your-app.com/page"
             required
             autocomplete="off"
@@ -528,7 +530,7 @@
 
       <div class="info-box">
         <strong>Tag Feature Mode</strong>
-        Launch the designer in Tag Feature mode. The Tag Feature UI will appear in the editor sidebar on the target website.
+        Enter any target URL. The Tag Feature UI will appear in the editor sidebar on the target website.
       </div>
     </div>
 
@@ -538,8 +540,9 @@
         <div class="form-group">
           <label for="tagPageUrl">Target URL</label>
           <input
-            type="url"
+            type="text"
             id="tagPageUrl"
+            class="target-url-input"
             placeholder="https://your-app.com/page"
             required
             autocomplete="off"
@@ -556,7 +559,7 @@
 
       <div class="info-box">
         <strong>Tag Page Mode</strong>
-        Launch the designer in Tag Page mode to tag and manage pages.
+        Enter any target URL. Launch the designer in Tag Page mode to tag and manage pages.
       </div>
     </div>
   </div>
@@ -648,6 +651,20 @@
       launchDesigner('tag-page');
     });
 
+    // Accept any URL: absolute (https://app.example.com), relative (target.html, /page), or domain-only (app.example.com)
+    function normalizeTargetUrl(input) {
+      const trimmed = (input || '').trim();
+      if (!trimmed) return '';
+      if (trimmed.startsWith('http://') || trimmed.startsWith('https://')) return trimmed;
+      if (trimmed.startsWith('//')) return window.location.protocol + trimmed;
+      if (trimmed.startsWith('/') || trimmed.startsWith('./'))
+        return new URL(trimmed, window.location.origin).href;
+      // Same-origin page name (e.g. target.html, index.html)
+      if (/^[\w.-]+\.(html?|php|aspx?)$/i.test(trimmed) || (trimmed.indexOf('/') === -1 && trimmed.indexOf('.') === -1))
+        return new URL(trimmed, window.location.origin).href;
+      return 'https://' + trimmed;
+    }
+
     function launchDesigner(mode, url = null) {
       let targetUrl = url;
       
@@ -672,10 +689,8 @@
         return;
       }
 
-      // Ensure URL has protocol
-      if (!targetUrl.startsWith('http://') && !targetUrl.startsWith('https://')) {
-        targetUrl = 'https://' + targetUrl;
-      }
+      // Normalize: support any URL (absolute, relative, or domain-only)
+      targetUrl = normalizeTargetUrl(targetUrl);
 
       // Validate URL
       let urlObj;
